--- a/WEB PORTFOLIO/index.html
+++ b/WEB PORTFOLIO/index.html
@@ -153,7 +153,7 @@
                     <h3 class="contact-label">
                         <i class="fas fa-envelope"></i> Email:
                     </h3>
-                    <p class="contact-detail">vimalagounder0@gmail.com</p>
+                    <p class="contact-detail">vimala.rajkumar92@gmail.com</p>
                 </div>
                 <div class="contact-card">
                     <h3 class="contact-label">
